--- a/ap/02_03_software.html
+++ b/ap/02_03_software.html
@@ -592,7 +592,7 @@ header, .context-menu, .megamenu-content, footer{
 
 </style><title>02_03_software</title>
 </head>
-<body class='typora-export'><div class='typora-export-content'>
-<div id='write'  class=''><h1 id='2-3-ソフトウェア'><span>2-3. ソフトウェア</span></h1><h2 id='2-3-1-オペレーティングシステム'><span>2-3-1. オペレーティングシステム</span></h2><ol><li><span>ブートストラップとは。</span></li><li><span>OSの目的3つとOSの構成3つとOSの機能4つをそれぞれ答えよ。（基本情報＋応用情報）</span></li><li><span>JCLとは。</span></li><li><span>ジョブの実行の流れは。（基本情報）</span></li><li><span>タスクのスケジューリング方式7つ。</span></li><li><span>SPTとは。</span></li><li><span>リアルタイムOSとは。またその略称は。</span></li><li><span>実記憶管理の方法3つ。（基本情報）</span></li><li><span>ファーストフィット方式、ベストフィット方式とはそれぞれ何か。</span></li><li><span>ページとは。</span></li><li><span>デマンドページングとは。またその対となるページング方式は。</span></li><li><span>ページングの置き換えアルゴリズム3つ。</span></li><li><span>可変長の区画で仮想記憶管理を行う方法は。</span></li></ol><h2 id='2-3-2-ミドルウェア'><span>2-3-2. ミドルウェア</span></h2><ol><li></li></ol></div></div>
+<body class='typora-export os-windows'><div class='typora-export-content'>
+<div id='write'  class=''><h1 id='2-3-ソフトウェア'><span>2-3. ソフトウェア</span></h1><h2 id='2-3-1-オペレーティングシステム'><span>2-3-1. オペレーティングシステム</span></h2><ol start='' ><li><span>ブートストラップとは。</span></li><li><span>OSの目的3つとOSの構成3つとOSの機能4つをそれぞれ答えよ。（基本情報＋応用情報）</span></li><li><span>JCLとは。</span></li><li><span>ジョブの実行の流れは。（基本情報）</span></li><li><span>タスクのスケジューリング方式7つ。</span></li><li><span>SPTとは。</span></li><li><span>リアルタイムOSとは。またその略称は。</span></li><li><span>実記憶管理の方法3つ。（基本情報）</span></li><li><span>ファーストフィット方式、ベストフィット方式とはそれぞれ何か。</span></li><li><span>ページとは。</span></li><li><span>デマンドページングとは。またその対となるページング方式は。</span></li><li><span>ページングの置き換えアルゴリズム3つ。</span></li><li><span>可変長の区画で仮想記憶管理を行う方法は。</span></li></ol><h2 id='2-3-2-ミドルウェア'><span>2-3-2. ミドルウェア</span></h2><ol><li><span>ミドルウェアの具体例5つ。</span></li><li><span>Hadoopとは何か。</span></li></ol><h3 id='2-3-3-ファイルシステム'><span>2-3-3. ファイルシステム</span></h3><ol><li></li></ol></div></div>
 </body>
 </html>
