--- a/ap/03_02_multimedia.html
+++ b/ap/03_02_multimedia.html
@@ -590,9 +590,9 @@ header, .context-menu, .megamenu-content, footer{
 
 
 
-</style><title>index</title>
+</style><title>03_02_multimedia</title>
 </head>
 <body class='typora-export os-windows'><div class='typora-export-content'>
-<div id='write'  class=''><h1 id='応用情報技術者'><span>応用情報技術者</span></h1><p><span>参考図書：</span><a href='https://book.impress.co.jp/books/1121101057'><span>徹底攻略 応用情報技術者教科書 令和4年度 - インプレスブックス</span></a></p><h2 id='メモ'><span>メモ</span></h2><ol start='' ><li><p><span>基礎理論</span></p><ol start='' ><li><a href='01_01_base.html'><span>基礎理論</span></a></li><li><a href='01_02_algorithm.html'><span>アルゴリズムとプログラミング</span></a></li></ol></li><li><p><span>コンピューターシステム</span></p><ol start='' ><li><a href='02_01_computer_components.html'><span>コンピューター構成要素</span></a></li><li><a href='02_02_system_components.html'><span>システム構成要素</span></a></li><li><a href='02_03_software.html'><span>ソフトウェア</span></a></li><li><a href='02_04_hardware.html'><span>ハードウェア</span></a></li></ol></li><li><p><span>技術要素</span></p><ol start='' ><li><a href='03_01_human_interface.html'><span>ヒューマンインターフェース</span></a></li><li><a href='03_02_multimedia.html'><span>マルチメディア</span></a></li><li><span>データベース</span></li><li><span>ネットワーク</span></li><li><span>セキュリティ</span></li></ol></li></ol></div></div>
+<div id='write'  class=''><h1 id='3-2-マルチメディア'><span>3-2. マルチメディア</span></h1><h2 id='3-2-1-マルチメディア技術'><span>3-2-1. マルチメディア技術</span></h2><ol><li><span>MPEGは何の略か。</span></li><li><span>MPEG-1、MPEG-2、MPEG-4の主な対象は。</span></li><li><span>H.264の別名は。</span></li><li><span>H.265の別名は。</span></li><li><span>H.265の技術を生かした画像フォーマットは。</span></li><li><span>MPEG-7とは。</span></li><li><span>SMILとは。</span></li><li><span>電子書籍の形式のEPUBのレイアウトのタイプ2つ。</span></li></ol><h2 id='3-2-2-マルチメディア応用'><span>3-2-2. マルチメディア応用</span></h2><ol><li><span>ベクターイメージとラスターイメージの違いは。</span></li><li><span>ディザリングとは。</span></li><li><span>3DCGのモデル3つ。</span></li><li><span>3DCGの作成技法6つ。</span></li><li><span>ARは何の略か。</span></li><li><span>ARの具体例。</span></li><li><span>VRの具体例。</span></li></ol></div></div>
 </body>
 </html>
