--- a/ap/03_03_database.html
+++ b/ap/03_03_database.html
@@ -590,9 +590,9 @@ header, .context-menu, .megamenu-content, footer{
 
 
 
-</style><title>index</title>
+</style><title>03_03_database</title>
 </head>
 <body class='typora-export os-windows'><div class='typora-export-content'>
-<div id='write'  class=''><h1 id='応用情報技術者'><span>応用情報技術者</span></h1><p><span>参考図書：</span><a href='https://book.impress.co.jp/books/1121101057'><span>徹底攻略 応用情報技術者教科書 令和4年度 - インプレスブックス</span></a></p><h2 id='メモ'><span>メモ</span></h2><ol start='' ><li><p><span>基礎理論</span></p><ol start='' ><li><a href='01_01_base.html'><span>基礎理論</span></a></li><li><a href='01_02_algorithm.html'><span>アルゴリズムとプログラミング</span></a></li></ol></li><li><p><span>コンピューターシステム</span></p><ol start='' ><li><a href='02_01_computer_components.html'><span>コンピューター構成要素</span></a></li><li><a href='02_02_system_components.html'><span>システム構成要素</span></a></li><li><a href='02_03_software.html'><span>ソフトウェア</span></a></li><li><a href='02_04_hardware.html'><span>ハードウェア</span></a></li></ol></li><li><p><span>技術要素</span></p><ol start='' ><li><a href='03_01_human_interface.html'><span>ヒューマンインターフェース</span></a></li><li><a href='03_02_multimedia.html'><span>マルチメディア</span></a></li><li><a href='03_03_database.html'><span>データベース</span></a></li><li><span>ネットワーク</span></li><li><span>セキュリティ</span></li></ol></li></ol></div></div>
+<div id='write'  class=''><h1 id='3-3-データベース'><span>3-3. データベース</span></h1><h2 id='3-3-1-データベース方式'><span>3-3-1. データベース方式</span></h2><ol><li><span>データベースのモデルにおいて、E-R図にあたるものは何モデルと呼ばれるか。</span></li><li><span>1.のモデルを外部に向けたものにしたのは何モデルと呼ばれるか。</span></li><li><span>1.のモデルを内部に向けたものにしたのは何モデルと呼ばれるか。</span></li><li><span>上記の各モデルに対応するスキーマは。</span></li><li><span>論理データ独立とは。</span></li><li><span>物理データ独立とは。</span></li><li><span>DBMSの4つの機能。（基本情報）</span></li><li><span>メタデータ管理は7.の機能のうちのどれにあたるか。</span></li><li><span>クエリ管理は7.の機能のうちのどれにあたるか。</span></li><li><span>トランザクション管理は7.の機能のうちのどれにあたるか。</span></li></ol><h2 id='3-3-2-データベース設計'><span>3-3-2. データベース設計</span></h2><ol><li><span>データベース設計におけるトップダウンアプローチの流れ3つ。</span></li><li><span>データベース設計におけるボトムアップアプローチの流れ3つ。</span></li><li><span>正規化の目的とは、何の時の異常排除か。</span></li><li><span>候補キーとは。</span></li><li><span>候補キーと主キーの違いとは。</span></li></ol></div></div>
 </body>
 </html>
