--- a/atcoder/abc321c.html
+++ b/atcoder/abc321c.html
@@ -205,6 +205,87 @@ mark .md-meta { color: rgb(0, 0, 0); }
 mjx-container { break-inside: avoid; }
 
 
+.CodeMirror { height: auto; }
+.CodeMirror.cm-s-inner { background: inherit; }
+.CodeMirror-scroll { overflow: auto hidden; z-index: 3; }
+.CodeMirror-gutter-filler, .CodeMirror-scrollbar-filler { background-color: rgb(255, 255, 255); }
+.CodeMirror-gutters { border-right: 1px solid rgb(221, 221, 221); background: inherit; white-space: nowrap; }
+.CodeMirror-linenumber { padding: 0px 3px 0px 5px; text-align: right; color: rgb(153, 153, 153); }
+.cm-s-inner .cm-keyword { color: rgb(119, 0, 136); }
+.cm-s-inner .cm-atom, .cm-s-inner.cm-atom { color: rgb(34, 17, 153); }
+.cm-s-inner .cm-number { color: rgb(17, 102, 68); }
+.cm-s-inner .cm-def { color: rgb(0, 0, 255); }
+.cm-s-inner .cm-variable { color: rgb(0, 0, 0); }
+.cm-s-inner .cm-variable-2 { color: rgb(0, 85, 170); }
+.cm-s-inner .cm-variable-3 { color: rgb(0, 136, 85); }
+.cm-s-inner .cm-string { color: rgb(170, 17, 17); }
+.cm-s-inner .cm-property { color: rgb(0, 0, 0); }
+.cm-s-inner .cm-operator { color: rgb(152, 26, 26); }
+.cm-s-inner .cm-comment, .cm-s-inner.cm-comment { color: rgb(170, 85, 0); }
+.cm-s-inner .cm-string-2 { color: rgb(255, 85, 0); }
+.cm-s-inner .cm-meta { color: rgb(85, 85, 85); }
+.cm-s-inner .cm-qualifier { color: rgb(85, 85, 85); }
+.cm-s-inner .cm-builtin { color: rgb(51, 0, 170); }
+.cm-s-inner .cm-bracket { color: rgb(153, 153, 119); }
+.cm-s-inner .cm-tag { color: rgb(17, 119, 0); }
+.cm-s-inner .cm-attribute { color: rgb(0, 0, 204); }
+.cm-s-inner .cm-header, .cm-s-inner.cm-header { color: rgb(0, 0, 255); }
+.cm-s-inner .cm-quote, .cm-s-inner.cm-quote { color: rgb(0, 153, 0); }
+.cm-s-inner .cm-hr, .cm-s-inner.cm-hr { color: rgb(153, 153, 153); }
+.cm-s-inner .cm-link, .cm-s-inner.cm-link { color: rgb(0, 0, 204); }
+.cm-negative { color: rgb(221, 68, 68); }
+.cm-positive { color: rgb(34, 153, 34); }
+.cm-header, .cm-strong { font-weight: 700; }
+.cm-del { text-decoration: line-through; }
+.cm-em { font-style: italic; }
+.cm-link { text-decoration: underline; }
+.cm-error { color: red; }
+.cm-invalidchar { color: red; }
+.cm-constant { color: rgb(38, 139, 210); }
+.cm-defined { color: rgb(181, 137, 0); }
+div.CodeMirror span.CodeMirror-matchingbracket { color: rgb(0, 255, 0); }
+div.CodeMirror span.CodeMirror-nonmatchingbracket { color: rgb(255, 34, 34); }
+.cm-s-inner .CodeMirror-activeline-background { background: inherit; }
+.CodeMirror { position: relative; overflow: hidden; }
+.CodeMirror-scroll { height: 100%; outline: 0px; position: relative; box-sizing: content-box; background: inherit; }
+.CodeMirror-sizer { position: relative; }
+.CodeMirror-gutter-filler, .CodeMirror-hscrollbar, .CodeMirror-scrollbar-filler, .CodeMirror-vscrollbar { position: absolute; z-index: 6; display: none; outline: 0px; }
+.CodeMirror-vscrollbar { right: 0px; top: 0px; overflow: hidden; }
+.CodeMirror-hscrollbar { bottom: 0px; left: 0px; overflow: auto hidden; }
+.CodeMirror-scrollbar-filler { right: 0px; bottom: 0px; }
+.CodeMirror-gutter-filler { left: 0px; bottom: 0px; }
+.CodeMirror-gutters { position: absolute; left: 0px; top: 0px; padding-bottom: 10px; z-index: 3; overflow-y: hidden; }
+.CodeMirror-gutter { white-space: normal; height: 100%; box-sizing: content-box; padding-bottom: 30px; margin-bottom: -32px; display: inline-block; }
+.CodeMirror-gutter-wrapper { position: absolute; z-index: 4; background: 0px 0px !important; border: none !important; }
+.CodeMirror-gutter-background { position: absolute; top: 0px; bottom: 0px; z-index: 4; }
+.CodeMirror-gutter-elt { position: absolute; cursor: default; z-index: 4; }
+.CodeMirror-lines { cursor: text; }
+.CodeMirror pre { border-radius: 0px; border-width: 0px; background: 0px 0px; font-family: inherit; font-size: inherit; margin: 0px; white-space: pre; overflow-wrap: normal; color: inherit; z-index: 2; position: relative; overflow: visible; }
+.CodeMirror-wrap pre { overflow-wrap: break-word; white-space: pre-wrap; word-break: normal; }
+.CodeMirror-code pre { border-right: 30px solid transparent; width: fit-content; }
+.CodeMirror-wrap .CodeMirror-code pre { border-right: none; width: auto; }
+.CodeMirror-linebackground { position: absolute; inset: 0px; z-index: 0; }
+.CodeMirror-linewidget { position: relative; z-index: 2; overflow: auto; }
+.CodeMirror-wrap .CodeMirror-scroll { overflow-x: hidden; }
+.CodeMirror-measure { position: absolute; width: 100%; height: 0px; overflow: hidden; visibility: hidden; }
+.CodeMirror-measure pre { position: static; }
+.CodeMirror div.CodeMirror-cursor { position: absolute; visibility: hidden; border-right: none; width: 0px; }
+.CodeMirror div.CodeMirror-cursor { visibility: hidden; }
+.CodeMirror-focused div.CodeMirror-cursor { visibility: inherit; }
+.cm-searching { background: rgba(255, 255, 0, 0.4); }
+span.cm-underlined { text-decoration: underline; }
+span.cm-strikethrough { text-decoration: line-through; }
+.cm-tw-syntaxerror { color: rgb(255, 255, 255); background-color: rgb(153, 0, 0); }
+.cm-tw-deleted { text-decoration: line-through; }
+.cm-tw-header5 { font-weight: 700; }
+.cm-tw-listitem:first-child { padding-left: 10px; }
+.cm-tw-box { border-style: solid; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px; border-color: inherit; border-top-width: 0px !important; }
+.cm-tw-underline { text-decoration: underline; }
+@media print {
+  .CodeMirror div.CodeMirror-cursor { visibility: hidden; }
+}
+
+
 :root {
     --side-bar-bg-color: #fafafa;
     --control-text-color: #777;
@@ -591,9 +672,11 @@ header, .context-menu, .megamenu-content, footer{
 
 
 
-</style><title>index</title>
+</style><title>abc321c</title>
 </head>
 <body class='typora-export os-windows'><div class='typora-export-content'>
-<div id='write'  class=''><h1 id='たけしのページ'><span>たけしのページ</span></h1><p><span>自分のやったこと。原理主義的。</span></p><p><a href='php-bbs/'><span>掲示板（質問はこちらへ）</span></a></p><h2 id='raspberry-piでwebサーバー'><span>Raspberry PiでWebサーバー</span></h2><p><span>このサイトはRaspberry Piで動いている。</span></p><ul><li><p><a href='startup/index.html'><span>Raspberry Pi立ち上げ編</span></a></p><p><span>買ってきたRaspberry Piを立ち上げ、外部ネットワークから遠隔操作できるようにする。</span></p></li><li><p><a href='webserver/index.html'><span>Webサーバー立ち上げ編</span></a></p><p><span>Webサーバー（Nginx）を導入し、HTMLファイルを作ってアップロードする。</span></p></li></ul><h2 id='やってみよう'><span>やってみよう</span></h2><p><span>環境構築から、ある程度のものを作るまでの開発記録。</span></p><ul><li><p><a href='wordpress/index.html'><span>PHP（WordPress）編</span></a></p><p><span>WordPressを導入してカスタムテーマを自作する。</span></p></li><li><p><a href='php/index.html'><span>PHP（掲示板作成）編</span></a></p><p><span>掲示板システムを自作する。</span></p></li><li><p><a href='jetsoncert/index.html'><span>Jetson AI Certification編</span></a></p><p><span>Jetsonにも手を出してみた。</span></p></li><li><p><a href='docker/index.html'><span>Docker編</span></a></p><p><span>Jetsonで動くアプリの環境作り。</span></p></li><li><p><a href='docker-lamp/index.html'><span>DockerでLAMP編</span></a></p><p><span>Docker編の番外編</span></p></li><li><p><a href='jetsonlab/index.html'><span>Jetson Nano サーバー編</span></a></p><p><span>Jetson上でJupyter Labを動かしてサーバー化して、実験室にする。</span></p></li><li><p><a href='kaggle/index.html'><span>Python（Kaggle）編</span></a><span>（保留中）</span></p><p><span>データ分析コンペティション「Kaggle」に挑む。</span></p></li></ul><h2 id='やってみた'><span>やってみた</span></h2><p><span>こちらはやってみた結果をざっくりと公開。</span></p><ul><li><p><a href='bbs-led/index.html'><span>Python（GPIO）編</span></a></p><p><span>掲示板に書き込みがあったらLEDでお知らせ。</span></p></li><li><p><a href='python_gui/index.html'><span>Python（GUIアプリ）編</span></a></p><p><span>15分ルールを実践するためのアプリ。</span></p></li><li><p><a href='ft232h/index.html'><span>PCにGPIOを編</span></a></p><p><span>Raspberry PiにあるGPIOをPCにも持たせる。</span></p></li><li><p><a href='win_terminal/index.html'><span>Windowsでターミナル生活</span></a></p><p><span>LinuxにハマったらWindowsでもターミナルを使いたくなる</span></p></li><li><p><a href='laravel/index.html'><span>Laravel</span></a></p><p><span>Laravelの環境構築</span></p></li></ul><h3 id='os編'><span>OS編</span></h3><ul><li><p><a href='garuda/index.html'><span>Garuda Linux編</span></a></p><p><span>かっこよさに惹かれて手を出してみる。</span></p></li><li><p><a href='ubuntuserver/index.html'><span>Ubuntu Server編</span></a></p><p><span>一家に1サーバー時代到来。ファイルサーバーと、ついでに色々。</span></p></li><li><p><a href='ubuntudesktop/index.html'><span>Ubuntu Desktop編</span></a></p><p><span>メインPCのOS、3代目</span></p></li><li><p><a href='rhel/index.html'><span>Red Hat Enterprise Linux（RHEL）編</span></a></p><p><span>完全に興味本位。</span></p></li><li><p><a href='vmware/index.html'><span>VMWareでCentOS編</span></a></p><p><span>訳あってVMWareでCentOSを動かす。</span></p></li><li><p><a href='kali/index.html'><span>Kali Linux編</span></a></p></li></ul><h2 id='未分類'><span>未分類</span></h2><h3 id='プログラミング'><span>プログラミング</span></h3><ul><li><p><a href='htmlcss/index.html'><span>HTML/CSS編</span></a></p><p><span>知り得た知見置き場。</span></p></li><li><p><a href='python/index.html'><span>Python編</span></a></p><p><span>文法以外の知っておくべき知識置き場。</span></p></li><li><p><a href='pytorch/index.html'><span>PyTorch編</span></a></p><p><span>ディープラーニングのフレームワーク。</span></p></li><li><p><a href='oop/index.html'><span>オブジェクト指向練習編</span></a></p><p><span>オブジェクト指向を習得する。</span></p></li><li><p><a href='deeplearning/index.html'><span>Deep Learning編</span></a></p><p><span>Deep Learningの仕組みの勉強をした跡。</span></p></li><li><p><a href='git/index.html'><span>Git編</span></a></p><p><span>備忘録</span></p></li></ul><h3 id='スマホアプリ'><span>スマホアプリ</span></h3><ul><li><p><a href='flutter/index.html'><span>Flutter編</span></a></p><p><span>AndroidアプリとiOSアプリが一つのコードで作成できる（らしい）Flutterを使ってアプリ開発をする。</span></p></li></ul><h3 id='勉強'><span>勉強</span></h3><ul><li><p><a href='fe/index.html'><span>基本情報技術者（FE）</span></a></p><p><span>勉強メモ1。</span></p></li><li><p><a href='ap/index.html'><span>応用情報技術者（AP）</span></a></p><p><span>勉強メモ3。</span></p></li><li><p><a href='statics/index.html'><span>統計学</span></a></p><p><span>勉強メモ2。</span></p></li><li><p><a href='exercises/index.html'><span>1000本ノック的な練習素材</span></a></p><p><span>ひたすらやる。</span></p></li><li><p><a href='vim/index.html'><span>Vim</span></a></p><p><span>宗教の一つ。</span></p></li><li><p><a href='technical_survey/index.html'><span>技術調査</span></a></p><p><span>会社として、そして個人として技術を採用する判断要素。</span></p></li><li><p><a href='books/index.html'><span>読書記録</span></a></p><p><span>読んだ本の記録。</span></p></li><li><p><a href='atcoder/index.html'><span>競技プログラミング</span></a></p><p><span>日々精進。</span></p></li></ul><h3 id='その他'><span>その他</span></h3><ul><li><p><a href='memo/index.html'><span>メモ</span></a></p><p><span>気になったことのメモ。将来のコンテンツ候補。</span></p></li><li><p><a href='poem/index.html'><span>思いついたこと</span></a></p><p><span>自作ポエム</span></p></li></ul></div></div>
+<div id='write'  class=''><h1 id='各桁が狭義の単調減少になっている数字'><span>各桁が狭義の単調減少になっている数字</span></h1><p><span>問題：</span><a href='https://atcoder.jp/contests/abc321/tasks/abc321_c' target='_blank' class='url'>https://atcoder.jp/contests/abc321/tasks/abc321_c</a></p><p><span>解説：</span><a href='https://atcoder.jp/contests/abc321/editorial/7261' target='_blank' class='url'>https://atcoder.jp/contests/abc321/editorial/7261</a></p><p><span>提出：</span><a href='https://atcoder.jp/contests/abc321/submissions/45899198' target='_blank' class='url'>https://atcoder.jp/contests/abc321/submissions/45899198</a></p><pre class="md-fences md-end-block ty-contain-cm modeLoaded" spellcheck="false" lang="c++" style="break-inside: unset;"><div class="CodeMirror cm-s-inner cm-s-null-scroll CodeMirror-wrap" lang="c++"><div style="overflow: hidden; position: relative; width: 3px; height: 0px; top: 9.52344px; left: 8px;"><textarea autocorrect="off" autocapitalize="off" spellcheck="false" tabindex="0" style="position: absolute; bottom: -1em; padding: 0px; width: 1000px; height: 1em; outline: none;"></textarea></div><div class="CodeMirror-scrollbar-filler" cm-not-content="true"></div><div class="CodeMirror-gutter-filler" cm-not-content="true"></div><div class="CodeMirror-scroll" tabindex="-1"><div class="CodeMirror-sizer" style="margin-left: 0px; margin-bottom: 0px; border-right-width: 0px; padding-right: 0px; padding-bottom: 0px;"><div style="position: relative; top: 0px;"><div class="CodeMirror-lines" role="presentation"><div role="presentation" style="position: relative; outline: none;"><div class="CodeMirror-measure"><span><span>​</span>x</span></div><div class="CodeMirror-measure"></div><div style="position: relative; z-index: 1;"></div><div class="CodeMirror-code" role="presentation" style=""><div class="CodeMirror-activeline" style="position: relative;"><div class="CodeMirror-activeline-background CodeMirror-linebackground"></div><div class="CodeMirror-gutter-background CodeMirror-activeline-gutter" style="left: 0px; width: 0px;"></div><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"><span class="cm-variable-3">int</span> <span class="cm-def">main</span> () {</span></pre></div><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp;<span class="cm-comment">// 321数は全部で1022個しか無いので先に作る</span></span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp;<span class="cm-variable">vector</span><span class="cm-operator">&lt;</span><span class="cm-variable">ll</span><span class="cm-operator">&gt;</span> <span class="cm-variable">ans</span>;</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"><span cm-text="" cm-zwsp="">
+</span></span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp;<span class="cm-comment">// 0～9の一つずつ使えばよい</span></span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp;<span class="cm-comment">// なので10桁のbitで全探索をする（ただし、0:数字を使わない、1:0しか使わないを除く）</span></span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp;<span class="cm-keyword">for</span>(<span class="cm-variable-3">int</span> <span class="cm-variable">i</span> <span class="cm-operator">=</span> <span class="cm-number">2</span>; <span class="cm-variable">i</span> <span class="cm-operator">&lt;</span> (<span class="cm-number">1</span> <span class="cm-operator">&lt;&lt;</span> <span class="cm-number">10</span>); <span class="cm-variable">i</span><span class="cm-operator">++</span>)</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp;  {</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp; &nbsp; &nbsp;<span class="cm-variable">ll</span> <span class="cm-variable">x</span> <span class="cm-operator">=</span> <span class="cm-number">0</span>;</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp; &nbsp; &nbsp;<span class="cm-keyword">for</span>(<span class="cm-variable-3">int</span> <span class="cm-variable">j</span> <span class="cm-operator">=</span> <span class="cm-number">9</span>; <span class="cm-variable">j</span> <span class="cm-operator">&gt;=</span> <span class="cm-number">0</span>; <span class="cm-variable">j</span><span class="cm-operator">--</span>)</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp; &nbsp;  {</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<span class="cm-keyword">if</span>(<span class="cm-variable">i</span> <span class="cm-operator">&amp;</span> (<span class="cm-number">1</span> <span class="cm-operator">&lt;&lt;</span> <span class="cm-variable">j</span>))</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  {</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<span class="cm-variable">x</span> <span class="cm-operator">*=</span> <span class="cm-number">10</span>;</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<span class="cm-variable">x</span> <span class="cm-operator">+=</span> <span class="cm-variable">j</span>;</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  }</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp; &nbsp;  }</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp; &nbsp; &nbsp;<span class="cm-variable">ans</span>.<span class="cm-variable">push_back</span>(<span class="cm-variable">x</span>);</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp;  }</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp;<span class="cm-variable">sort</span>(<span class="cm-variable">all</span>(<span class="cm-variable">ans</span>));</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"><span cm-text="" cm-zwsp="">
+</span></span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp;<span class="cm-comment">// 入力を受け付けて回答を出力</span></span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp;<span class="cm-variable-3">int</span> <span class="cm-variable">k</span>;</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp;<span class="cm-variable">cin</span> <span class="cm-operator">&gt;&gt;</span> <span class="cm-variable">k</span>;</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp;<span class="cm-variable">cout</span> <span class="cm-operator">&lt;&lt;</span> <span class="cm-variable">ans</span>.<span class="cm-variable">at</span>(<span class="cm-variable">k</span> <span class="cm-operator">-</span> <span class="cm-number">1</span>) <span class="cm-operator">&lt;&lt;</span> <span class="cm-variable">endl</span>;</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;">}</span></pre></div></div></div></div></div><div style="position: absolute; height: 0px; width: 1px; border-bottom: 0px solid transparent; top: 599px;"></div><div class="CodeMirror-gutters" style="display: none; height: 599px;"></div></div></div></pre><p>&nbsp;</p></div></div>
 </body>
 </html>
